parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    CONFIDENCE
    DISTRIBUTION
    ELSE
    EVIDENCE
    FILTER
    IF
    RANGE
    THEN

Grammar

Rule 0     S' -> programa
Rule 1     programa -> sentencia
Rule 2     programa -> programa sentencia
Rule 3     sentencia -> importacion
Rule 4     sentencia -> preprocesamiento
Rule 5     sentencia -> declaracion_hecho
Rule 6     sentencia -> declaracion_regla
Rule 7     sentencia -> consulta
Rule 8     sentencia -> error
Rule 9     importacion -> DATASET ID ASIG IMPORT FROM STRING
Rule 10    preprocesamiento -> DATASET ID ASIG SELECT lista_cols_tipadas FROM ID condicion_opt agrupacion_opt descubrimiento_opt
Rule 11    lista_ids -> ID
Rule 12    lista_ids -> ID COMMA lista_ids
Rule 13    lista_cols_tipadas -> col_tipada
Rule 14    lista_cols_tipadas -> col_tipada COMMA lista_cols_tipadas
Rule 15    col_tipada -> ID COLON tipo
Rule 16    col_tipada -> ID
Rule 17    tipo -> TYPE_INT
Rule 18    tipo -> TYPE_REAL
Rule 19    tipo -> TYPE_STRING
Rule 20    tipo -> TYPE_BOOL
Rule 21    condicion_opt -> WHERE expresion
Rule 22    condicion_opt -> empty
Rule 23    agrupacion_opt -> GROUP lista_ids
Rule 24    agrupacion_opt -> empty
Rule 25    descubrimiento_opt -> AUTO_DISCOVER lista_hechos
Rule 26    descubrimiento_opt -> empty
Rule 27    lista_hechos -> DATASET LPAREN ID RPAREN WHERE CORRELATION operador_relacional REAL
Rule 28    declaracion_hecho -> FACT ID ASIG probabilidad_condicional
Rule 29    declaracion_hecho -> declaracion_metrica
Rule 30    declaracion_metrica -> ID ASIG metrica_estatica
Rule 31    metrica_estatica -> MEAN LPAREN ID DOT ID RPAREN
Rule 32    metrica_estatica -> VAR LPAREN ID DOT ID RPAREN
Rule 33    metrica_estatica -> STD LPAREN ID DOT ID RPAREN
Rule 34    metrica_estatica -> CORRELATION LPAREN ID DOT ID COMMA ID DOT ID RPAREN
Rule 35    declaracion_regla -> RULE ID COND expresion
Rule 36    consulta -> QUERY ID explicacion_opt
Rule 37    explicacion_opt -> EXPLAIN
Rule 38    explicacion_opt -> WHY
Rule 39    explicacion_opt -> empty
Rule 40    expresion -> expresion OR termino_comparacion
Rule 41    expresion -> termino_comparacion
Rule 42    termino_comparacion -> termino_comparacion AND termino_logico
Rule 43    termino_comparacion -> termino_logico
Rule 44    termino_logico -> NOT factor_logico
Rule 45    termino_logico -> factor_logico
Rule 46    factor_logico -> LPAREN expresion RPAREN
Rule 47    factor_logico -> termino_relacional
Rule 48    factor_logico -> probabilidad_condicional
Rule 49    factor_logico -> ID
Rule 50    factor_logico -> TRUE
Rule 51    factor_logico -> FALSE
Rule 52    termino_relacional -> termino_aritmetico operador_relacional termino_aritmetico
Rule 53    probabilidad_condicional -> PROB LPAREN expresion RPAREN
Rule 54    probabilidad_condicional -> PROB LPAREN expresion GIVEN expresion RPAREN
Rule 55    operador_relacional -> EQ
Rule 56    operador_relacional -> NEQ
Rule 57    operador_relacional -> LEQ
Rule 58    operador_relacional -> GEQ
Rule 59    operador_relacional -> LESSTHAN
Rule 60    operador_relacional -> GREATERTHAN
Rule 61    termino_aritmetico -> termino_aritmetico ADD factor_aritmetico
Rule 62    termino_aritmetico -> termino_aritmetico SUB factor_aritmetico
Rule 63    termino_aritmetico -> factor_aritmetico
Rule 64    factor_aritmetico -> factor_aritmetico MUL unario_aritmetico
Rule 65    factor_aritmetico -> factor_aritmetico DIV unario_aritmetico
Rule 66    factor_aritmetico -> unario_aritmetico
Rule 67    unario_aritmetico -> SUB potencia
Rule 68    unario_aritmetico -> ADD potencia
Rule 69    unario_aritmetico -> potencia
Rule 70    potencia -> valor_base POW unario_aritmetico
Rule 71    potencia -> valor_base
Rule 72    valor_base -> INT
Rule 73    valor_base -> REAL
Rule 74    valor_base -> STRING
Rule 75    valor_base -> TRUE
Rule 76    valor_base -> FALSE
Rule 77    valor_base -> ID
Rule 78    valor_base -> ID DOT ID
Rule 79    valor_base -> LPAREN termino_aritmetico RPAREN
Rule 80    valor_base -> probabilidad_condicional
Rule 81    empty -> <empty>

Terminals, with rules where they appear

ADD                  : 61 68
AND                  : 42
ASIG                 : 9 10 28 30
AUTO_DISCOVER        : 25
COLON                : 15
COMMA                : 12 14 34
COND                 : 35
CONFIDENCE           : 
CORRELATION          : 27 34
DATASET              : 9 10 27
DISTRIBUTION         : 
DIV                  : 65
DOT                  : 31 32 33 34 34 78
ELSE                 : 
EQ                   : 55
EVIDENCE             : 
EXPLAIN              : 37
FACT                 : 28
FALSE                : 51 76
FILTER               : 
FROM                 : 9 10
GEQ                  : 58
GIVEN                : 54
GREATERTHAN          : 60
GROUP                : 23
ID                   : 9 10 10 11 12 15 16 27 28 30 31 31 32 32 33 33 34 34 34 34 35 36 49 77 78 78
IF                   : 
IMPORT               : 9
INT                  : 72
LEQ                  : 57
LESSTHAN             : 59
LPAREN               : 27 31 32 33 34 46 53 54 79
MEAN                 : 31
MUL                  : 64
NEQ                  : 56
NOT                  : 44
OR                   : 40
POW                  : 70
PROB                 : 53 54
QUERY                : 36
RANGE                : 
REAL                 : 27 73
RPAREN               : 27 31 32 33 34 46 53 54 79
RULE                 : 35
SELECT               : 10
STD                  : 33
STRING               : 9 74
SUB                  : 62 67
THEN                 : 
TRUE                 : 50 75
TYPE_BOOL            : 20
TYPE_INT             : 17
TYPE_REAL            : 18
TYPE_STRING          : 19
VAR                  : 32
WHERE                : 21 27
WHY                  : 38
error                : 8

Nonterminals, with rules where they appear

agrupacion_opt       : 10
col_tipada           : 13 14
condicion_opt        : 10
consulta             : 7
declaracion_hecho    : 5
declaracion_metrica  : 29
declaracion_regla    : 6
descubrimiento_opt   : 10
empty                : 22 24 26 39
explicacion_opt      : 36
expresion            : 21 35 40 46 53 54 54
factor_aritmetico    : 61 62 63 64 65
factor_logico        : 44 45
importacion          : 3
lista_cols_tipadas   : 10 14
lista_hechos         : 25
lista_ids            : 12 23
metrica_estatica     : 30
operador_relacional  : 27 52
potencia             : 67 68 69
preprocesamiento     : 4
probabilidad_condicional : 28 48 80
programa             : 2 0
sentencia            : 1 2
termino_aritmetico   : 52 52 61 62 79
termino_comparacion  : 40 41 42
termino_logico       : 42 43
termino_relacional   : 47
tipo                 : 15
unario_aritmetico    : 64 65 66 70
valor_base           : 70 71

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . sentencia
    (2) programa -> . programa sentencia
    (3) sentencia -> . importacion
    (4) sentencia -> . preprocesamiento
    (5) sentencia -> . declaracion_hecho
    (6) sentencia -> . declaracion_regla
    (7) sentencia -> . consulta
    (8) sentencia -> . error
    (9) importacion -> . DATASET ID ASIG IMPORT FROM STRING
    (10) preprocesamiento -> . DATASET ID ASIG SELECT lista_cols_tipadas FROM ID condicion_opt agrupacion_opt descubrimiento_opt
    (28) declaracion_hecho -> . FACT ID ASIG probabilidad_condicional
    (29) declaracion_hecho -> . declaracion_metrica
    (35) declaracion_regla -> . RULE ID COND expresion
    (36) consulta -> . QUERY ID explicacion_opt
    (30) declaracion_metrica -> . ID ASIG metrica_estatica

    error           shift and go to state 8
    DATASET         shift and go to state 9
    FACT            shift and go to state 11
    RULE            shift and go to state 13
    QUERY           shift and go to state 14
    ID              shift and go to state 10

    programa                       shift and go to state 1
    sentencia                      shift and go to state 2
    importacion                    shift and go to state 3
    preprocesamiento               shift and go to state 4
    declaracion_hecho              shift and go to state 5
    declaracion_regla              shift and go to state 6
    consulta                       shift and go to state 7
    declaracion_metrica            shift and go to state 12

state 1

    (0) S' -> programa .
    (2) programa -> programa . sentencia
    (3) sentencia -> . importacion
    (4) sentencia -> . preprocesamiento
    (5) sentencia -> . declaracion_hecho
    (6) sentencia -> . declaracion_regla
    (7) sentencia -> . consulta
    (8) sentencia -> . error
    (9) importacion -> . DATASET ID ASIG IMPORT FROM STRING
    (10) preprocesamiento -> . DATASET ID ASIG SELECT lista_cols_tipadas FROM ID condicion_opt agrupacion_opt descubrimiento_opt
    (28) declaracion_hecho -> . FACT ID ASIG probabilidad_condicional
    (29) declaracion_hecho -> . declaracion_metrica
    (35) declaracion_regla -> . RULE ID COND expresion
    (36) consulta -> . QUERY ID explicacion_opt
    (30) declaracion_metrica -> . ID ASIG metrica_estatica

    error           shift and go to state 8
    DATASET         shift and go to state 9
    FACT            shift and go to state 11
    RULE            shift and go to state 13
    QUERY           shift and go to state 14
    ID              shift and go to state 10

    sentencia                      shift and go to state 15
    importacion                    shift and go to state 3
    preprocesamiento               shift and go to state 4
    declaracion_hecho              shift and go to state 5
    declaracion_regla              shift and go to state 6
    consulta                       shift and go to state 7
    declaracion_metrica            shift and go to state 12

state 2

    (1) programa -> sentencia .

    error           reduce using rule 1 (programa -> sentencia .)
    DATASET         reduce using rule 1 (programa -> sentencia .)
    FACT            reduce using rule 1 (programa -> sentencia .)
    RULE            reduce using rule 1 (programa -> sentencia .)
    QUERY           reduce using rule 1 (programa -> sentencia .)
    ID              reduce using rule 1 (programa -> sentencia .)
    $end            reduce using rule 1 (programa -> sentencia .)


state 3

    (3) sentencia -> importacion .

    error           reduce using rule 3 (sentencia -> importacion .)
    DATASET         reduce using rule 3 (sentencia -> importacion .)
    FACT            reduce using rule 3 (sentencia -> importacion .)
    RULE            reduce using rule 3 (sentencia -> importacion .)
    QUERY           reduce using rule 3 (sentencia -> importacion .)
    ID              reduce using rule 3 (sentencia -> importacion .)
    $end            reduce using rule 3 (sentencia -> importacion .)


state 4

    (4) sentencia -> preprocesamiento .

    error           reduce using rule 4 (sentencia -> preprocesamiento .)
    DATASET         reduce using rule 4 (sentencia -> preprocesamiento .)
    FACT            reduce using rule 4 (sentencia -> preprocesamiento .)
    RULE            reduce using rule 4 (sentencia -> preprocesamiento .)
    QUERY           reduce using rule 4 (sentencia -> preprocesamiento .)
    ID              reduce using rule 4 (sentencia -> preprocesamiento .)
    $end            reduce using rule 4 (sentencia -> preprocesamiento .)


state 5

    (5) sentencia -> declaracion_hecho .

    error           reduce using rule 5 (sentencia -> declaracion_hecho .)
    DATASET         reduce using rule 5 (sentencia -> declaracion_hecho .)
    FACT            reduce using rule 5 (sentencia -> declaracion_hecho .)
    RULE            reduce using rule 5 (sentencia -> declaracion_hecho .)
    QUERY           reduce using rule 5 (sentencia -> declaracion_hecho .)
    ID              reduce using rule 5 (sentencia -> declaracion_hecho .)
    $end            reduce using rule 5 (sentencia -> declaracion_hecho .)


state 6

    (6) sentencia -> declaracion_regla .

    error           reduce using rule 6 (sentencia -> declaracion_regla .)
    DATASET         reduce using rule 6 (sentencia -> declaracion_regla .)
    FACT            reduce using rule 6 (sentencia -> declaracion_regla .)
    RULE            reduce using rule 6 (sentencia -> declaracion_regla .)
    QUERY           reduce using rule 6 (sentencia -> declaracion_regla .)
    ID              reduce using rule 6 (sentencia -> declaracion_regla .)
    $end            reduce using rule 6 (sentencia -> declaracion_regla .)


state 7

    (7) sentencia -> consulta .

    error           reduce using rule 7 (sentencia -> consulta .)
    DATASET         reduce using rule 7 (sentencia -> consulta .)
    FACT            reduce using rule 7 (sentencia -> consulta .)
    RULE            reduce using rule 7 (sentencia -> consulta .)
    QUERY           reduce using rule 7 (sentencia -> consulta .)
    ID              reduce using rule 7 (sentencia -> consulta .)
    $end            reduce using rule 7 (sentencia -> consulta .)


state 8

    (8) sentencia -> error .

    error           reduce using rule 8 (sentencia -> error .)
    DATASET         reduce using rule 8 (sentencia -> error .)
    FACT            reduce using rule 8 (sentencia -> error .)
    RULE            reduce using rule 8 (sentencia -> error .)
    QUERY           reduce using rule 8 (sentencia -> error .)
    ID              reduce using rule 8 (sentencia -> error .)
    $end            reduce using rule 8 (sentencia -> error .)


state 9

    (9) importacion -> DATASET . ID ASIG IMPORT FROM STRING
    (10) preprocesamiento -> DATASET . ID ASIG SELECT lista_cols_tipadas FROM ID condicion_opt agrupacion_opt descubrimiento_opt

    ID              shift and go to state 16


state 10

    (30) declaracion_metrica -> ID . ASIG metrica_estatica

    ASIG            shift and go to state 17


state 11

    (28) declaracion_hecho -> FACT . ID ASIG probabilidad_condicional

    ID              shift and go to state 18


state 12

    (29) declaracion_hecho -> declaracion_metrica .

    error           reduce using rule 29 (declaracion_hecho -> declaracion_metrica .)
    DATASET         reduce using rule 29 (declaracion_hecho -> declaracion_metrica .)
    FACT            reduce using rule 29 (declaracion_hecho -> declaracion_metrica .)
    RULE            reduce using rule 29 (declaracion_hecho -> declaracion_metrica .)
    QUERY           reduce using rule 29 (declaracion_hecho -> declaracion_metrica .)
    ID              reduce using rule 29 (declaracion_hecho -> declaracion_metrica .)
    $end            reduce using rule 29 (declaracion_hecho -> declaracion_metrica .)


state 13

    (35) declaracion_regla -> RULE . ID COND expresion

    ID              shift and go to state 19


state 14

    (36) consulta -> QUERY . ID explicacion_opt

    ID              shift and go to state 20


state 15

    (2) programa -> programa sentencia .

    error           reduce using rule 2 (programa -> programa sentencia .)
    DATASET         reduce using rule 2 (programa -> programa sentencia .)
    FACT            reduce using rule 2 (programa -> programa sentencia .)
    RULE            reduce using rule 2 (programa -> programa sentencia .)
    QUERY           reduce using rule 2 (programa -> programa sentencia .)
    ID              reduce using rule 2 (programa -> programa sentencia .)
    $end            reduce using rule 2 (programa -> programa sentencia .)


state 16

    (9) importacion -> DATASET ID . ASIG IMPORT FROM STRING
    (10) preprocesamiento -> DATASET ID . ASIG SELECT lista_cols_tipadas FROM ID condicion_opt agrupacion_opt descubrimiento_opt

    ASIG            shift and go to state 21


state 17

    (30) declaracion_metrica -> ID ASIG . metrica_estatica
    (31) metrica_estatica -> . MEAN LPAREN ID DOT ID RPAREN
    (32) metrica_estatica -> . VAR LPAREN ID DOT ID RPAREN
    (33) metrica_estatica -> . STD LPAREN ID DOT ID RPAREN
    (34) metrica_estatica -> . CORRELATION LPAREN ID DOT ID COMMA ID DOT ID RPAREN

    MEAN            shift and go to state 23
    VAR             shift and go to state 24
    STD             shift and go to state 25
    CORRELATION     shift and go to state 26

    metrica_estatica               shift and go to state 22

state 18

    (28) declaracion_hecho -> FACT ID . ASIG probabilidad_condicional

    ASIG            shift and go to state 27


state 19

    (35) declaracion_regla -> RULE ID . COND expresion

    COND            shift and go to state 28


state 20

    (36) consulta -> QUERY ID . explicacion_opt
    (37) explicacion_opt -> . EXPLAIN
    (38) explicacion_opt -> . WHY
    (39) explicacion_opt -> . empty
    (81) empty -> .

    EXPLAIN         shift and go to state 30
    WHY             shift and go to state 31
    error           reduce using rule 81 (empty -> .)
    DATASET         reduce using rule 81 (empty -> .)
    FACT            reduce using rule 81 (empty -> .)
    RULE            reduce using rule 81 (empty -> .)
    QUERY           reduce using rule 81 (empty -> .)
    ID              reduce using rule 81 (empty -> .)
    $end            reduce using rule 81 (empty -> .)

    explicacion_opt                shift and go to state 29
    empty                          shift and go to state 32

state 21

    (9) importacion -> DATASET ID ASIG . IMPORT FROM STRING
    (10) preprocesamiento -> DATASET ID ASIG . SELECT lista_cols_tipadas FROM ID condicion_opt agrupacion_opt descubrimiento_opt

    IMPORT          shift and go to state 33
    SELECT          shift and go to state 34


state 22

    (30) declaracion_metrica -> ID ASIG metrica_estatica .

    error           reduce using rule 30 (declaracion_metrica -> ID ASIG metrica_estatica .)
    DATASET         reduce using rule 30 (declaracion_metrica -> ID ASIG metrica_estatica .)
    FACT            reduce using rule 30 (declaracion_metrica -> ID ASIG metrica_estatica .)
    RULE            reduce using rule 30 (declaracion_metrica -> ID ASIG metrica_estatica .)
    QUERY           reduce using rule 30 (declaracion_metrica -> ID ASIG metrica_estatica .)
    ID              reduce using rule 30 (declaracion_metrica -> ID ASIG metrica_estatica .)
    $end            reduce using rule 30 (declaracion_metrica -> ID ASIG metrica_estatica .)


state 23

    (31) metrica_estatica -> MEAN . LPAREN ID DOT ID RPAREN

    LPAREN          shift and go to state 35


state 24

    (32) metrica_estatica -> VAR . LPAREN ID DOT ID RPAREN

    LPAREN          shift and go to state 36


state 25

    (33) metrica_estatica -> STD . LPAREN ID DOT ID RPAREN

    LPAREN          shift and go to state 37


state 26

    (34) metrica_estatica -> CORRELATION . LPAREN ID DOT ID COMMA ID DOT ID RPAREN

    LPAREN          shift and go to state 38


state 27

    (28) declaracion_hecho -> FACT ID ASIG . probabilidad_condicional
    (53) probabilidad_condicional -> . PROB LPAREN expresion RPAREN
    (54) probabilidad_condicional -> . PROB LPAREN expresion GIVEN expresion RPAREN

    PROB            shift and go to state 40

    probabilidad_condicional       shift and go to state 39

state 28

    (35) declaracion_regla -> RULE ID COND . expresion
    (40) expresion -> . expresion OR termino_comparacion
    (41) expresion -> . termino_comparacion
    (42) termino_comparacion -> . termino_comparacion AND termino_logico
    (43) termino_comparacion -> . termino_logico
    (44) termino_logico -> . NOT factor_logico
    (45) termino_logico -> . factor_logico
    (46) factor_logico -> . LPAREN expresion RPAREN
    (47) factor_logico -> . termino_relacional
    (48) factor_logico -> . probabilidad_condicional
    (49) factor_logico -> . ID
    (50) factor_logico -> . TRUE
    (51) factor_logico -> . FALSE
    (52) termino_relacional -> . termino_aritmetico operador_relacional termino_aritmetico
    (53) probabilidad_condicional -> . PROB LPAREN expresion RPAREN
    (54) probabilidad_condicional -> . PROB LPAREN expresion GIVEN expresion RPAREN
    (61) termino_aritmetico -> . termino_aritmetico ADD factor_aritmetico
    (62) termino_aritmetico -> . termino_aritmetico SUB factor_aritmetico
    (63) termino_aritmetico -> . factor_aritmetico
    (64) factor_aritmetico -> . factor_aritmetico MUL unario_aritmetico
    (65) factor_aritmetico -> . factor_aritmetico DIV unario_aritmetico
    (66) factor_aritmetico -> . unario_aritmetico
    (67) unario_aritmetico -> . SUB potencia
    (68) unario_aritmetico -> . ADD potencia
    (69) unario_aritmetico -> . potencia
    (70) potencia -> . valor_base POW unario_aritmetico
    (71) potencia -> . valor_base
    (72) valor_base -> . INT
    (73) valor_base -> . REAL
    (74) valor_base -> . STRING
    (75) valor_base -> . TRUE
    (76) valor_base -> . FALSE
    (77) valor_base -> . ID
    (78) valor_base -> . ID DOT ID
    (79) valor_base -> . LPAREN termino_aritmetico RPAREN
    (80) valor_base -> . probabilidad_condicional

    NOT             shift and go to state 45
    LPAREN          shift and go to state 47
    ID              shift and go to state 41
    TRUE            shift and go to state 50
    FALSE           shift and go to state 51
    PROB            shift and go to state 40
    SUB             shift and go to state 55
    ADD             shift and go to state 53
    INT             shift and go to state 59
    REAL            shift and go to state 60
    STRING          shift and go to state 61

    expresion                      shift and go to state 42
    termino_comparacion            shift and go to state 43
    termino_logico                 shift and go to state 44
    factor_logico                  shift and go to state 46
    termino_relacional             shift and go to state 48
    probabilidad_condicional       shift and go to state 49
    termino_aritmetico             shift and go to state 52
    factor_aritmetico              shift and go to state 54
    unario_aritmetico              shift and go to state 56
    potencia                       shift and go to state 57
    valor_base                     shift and go to state 58

state 29

    (36) consulta -> QUERY ID explicacion_opt .

    error           reduce using rule 36 (consulta -> QUERY ID explicacion_opt .)
    DATASET         reduce using rule 36 (consulta -> QUERY ID explicacion_opt .)
    FACT            reduce using rule 36 (consulta -> QUERY ID explicacion_opt .)
    RULE            reduce using rule 36 (consulta -> QUERY ID explicacion_opt .)
    QUERY           reduce using rule 36 (consulta -> QUERY ID explicacion_opt .)
    ID              reduce using rule 36 (consulta -> QUERY ID explicacion_opt .)
    $end            reduce using rule 36 (consulta -> QUERY ID explicacion_opt .)


state 30

    (37) explicacion_opt -> EXPLAIN .

    error           reduce using rule 37 (explicacion_opt -> EXPLAIN .)
    DATASET         reduce using rule 37 (explicacion_opt -> EXPLAIN .)
    FACT            reduce using rule 37 (explicacion_opt -> EXPLAIN .)
    RULE            reduce using rule 37 (explicacion_opt -> EXPLAIN .)
    QUERY           reduce using rule 37 (explicacion_opt -> EXPLAIN .)
    ID              reduce using rule 37 (explicacion_opt -> EXPLAIN .)
    $end            reduce using rule 37 (explicacion_opt -> EXPLAIN .)


state 31

    (38) explicacion_opt -> WHY .

    error           reduce using rule 38 (explicacion_opt -> WHY .)
    DATASET         reduce using rule 38 (explicacion_opt -> WHY .)
    FACT            reduce using rule 38 (explicacion_opt -> WHY .)
    RULE            reduce using rule 38 (explicacion_opt -> WHY .)
    QUERY           reduce using rule 38 (explicacion_opt -> WHY .)
    ID              reduce using rule 38 (explicacion_opt -> WHY .)
    $end            reduce using rule 38 (explicacion_opt -> WHY .)


state 32

    (39) explicacion_opt -> empty .

    error           reduce using rule 39 (explicacion_opt -> empty .)
    DATASET         reduce using rule 39 (explicacion_opt -> empty .)
    FACT            reduce using rule 39 (explicacion_opt -> empty .)
    RULE            reduce using rule 39 (explicacion_opt -> empty .)
    QUERY           reduce using rule 39 (explicacion_opt -> empty .)
    ID              reduce using rule 39 (explicacion_opt -> empty .)
    $end            reduce using rule 39 (explicacion_opt -> empty .)


state 33

    (9) importacion -> DATASET ID ASIG IMPORT . FROM STRING

    FROM            shift and go to state 62


state 34

    (10) preprocesamiento -> DATASET ID ASIG SELECT . lista_cols_tipadas FROM ID condicion_opt agrupacion_opt descubrimiento_opt
    (13) lista_cols_tipadas -> . col_tipada
    (14) lista_cols_tipadas -> . col_tipada COMMA lista_cols_tipadas
    (15) col_tipada -> . ID COLON tipo
    (16) col_tipada -> . ID

    ID              shift and go to state 63

    lista_cols_tipadas             shift and go to state 64
    col_tipada                     shift and go to state 65

state 35

    (31) metrica_estatica -> MEAN LPAREN . ID DOT ID RPAREN

    ID              shift and go to state 66


state 36

    (32) metrica_estatica -> VAR LPAREN . ID DOT ID RPAREN

    ID              shift and go to state 67


state 37

    (33) metrica_estatica -> STD LPAREN . ID DOT ID RPAREN

    ID              shift and go to state 68


state 38

    (34) metrica_estatica -> CORRELATION LPAREN . ID DOT ID COMMA ID DOT ID RPAREN

    ID              shift and go to state 69


state 39

    (28) declaracion_hecho -> FACT ID ASIG probabilidad_condicional .

    error           reduce using rule 28 (declaracion_hecho -> FACT ID ASIG probabilidad_condicional .)
    DATASET         reduce using rule 28 (declaracion_hecho -> FACT ID ASIG probabilidad_condicional .)
    FACT            reduce using rule 28 (declaracion_hecho -> FACT ID ASIG probabilidad_condicional .)
    RULE            reduce using rule 28 (declaracion_hecho -> FACT ID ASIG probabilidad_condicional .)
    QUERY           reduce using rule 28 (declaracion_hecho -> FACT ID ASIG probabilidad_condicional .)
    ID              reduce using rule 28 (declaracion_hecho -> FACT ID ASIG probabilidad_condicional .)
    $end            reduce using rule 28 (declaracion_hecho -> FACT ID ASIG probabilidad_condicional .)


state 40

    (53) probabilidad_condicional -> PROB . LPAREN expresion RPAREN
    (54) probabilidad_condicional -> PROB . LPAREN expresion GIVEN expresion RPAREN

    LPAREN          shift and go to state 70


state 41

    (49) factor_logico -> ID .
    (77) valor_base -> ID .
    (78) valor_base -> ID . DOT ID

  ! reduce/reduce conflict for RPAREN resolved using rule 49 (factor_logico -> ID .)
    AND             reduce using rule 49 (factor_logico -> ID .)
    OR              reduce using rule 49 (factor_logico -> ID .)
    error           reduce using rule 49 (factor_logico -> ID .)
    DATASET         reduce using rule 49 (factor_logico -> ID .)
    FACT            reduce using rule 49 (factor_logico -> ID .)
    RULE            reduce using rule 49 (factor_logico -> ID .)
    QUERY           reduce using rule 49 (factor_logico -> ID .)
    ID              reduce using rule 49 (factor_logico -> ID .)
    $end            reduce using rule 49 (factor_logico -> ID .)
    RPAREN          reduce using rule 49 (factor_logico -> ID .)
    GIVEN           reduce using rule 49 (factor_logico -> ID .)
    GROUP           reduce using rule 49 (factor_logico -> ID .)
    AUTO_DISCOVER   reduce using rule 49 (factor_logico -> ID .)
    POW             reduce using rule 77 (valor_base -> ID .)
    MUL             reduce using rule 77 (valor_base -> ID .)
    DIV             reduce using rule 77 (valor_base -> ID .)
    ADD             reduce using rule 77 (valor_base -> ID .)
    SUB             reduce using rule 77 (valor_base -> ID .)
    EQ              reduce using rule 77 (valor_base -> ID .)
    NEQ             reduce using rule 77 (valor_base -> ID .)
    LEQ             reduce using rule 77 (valor_base -> ID .)
    GEQ             reduce using rule 77 (valor_base -> ID .)
    LESSTHAN        reduce using rule 77 (valor_base -> ID .)
    GREATERTHAN     reduce using rule 77 (valor_base -> ID .)
    DOT             shift and go to state 71

  ! RPAREN          [ reduce using rule 77 (valor_base -> ID .) ]


state 42

    (35) declaracion_regla -> RULE ID COND expresion .
    (40) expresion -> expresion . OR termino_comparacion

    error           reduce using rule 35 (declaracion_regla -> RULE ID COND expresion .)
    DATASET         reduce using rule 35 (declaracion_regla -> RULE ID COND expresion .)
    FACT            reduce using rule 35 (declaracion_regla -> RULE ID COND expresion .)
    RULE            reduce using rule 35 (declaracion_regla -> RULE ID COND expresion .)
    QUERY           reduce using rule 35 (declaracion_regla -> RULE ID COND expresion .)
    ID              reduce using rule 35 (declaracion_regla -> RULE ID COND expresion .)
    $end            reduce using rule 35 (declaracion_regla -> RULE ID COND expresion .)
    OR              shift and go to state 72


state 43

    (41) expresion -> termino_comparacion .
    (42) termino_comparacion -> termino_comparacion . AND termino_logico

    OR              reduce using rule 41 (expresion -> termino_comparacion .)
    error           reduce using rule 41 (expresion -> termino_comparacion .)
    DATASET         reduce using rule 41 (expresion -> termino_comparacion .)
    FACT            reduce using rule 41 (expresion -> termino_comparacion .)
    RULE            reduce using rule 41 (expresion -> termino_comparacion .)
    QUERY           reduce using rule 41 (expresion -> termino_comparacion .)
    ID              reduce using rule 41 (expresion -> termino_comparacion .)
    $end            reduce using rule 41 (expresion -> termino_comparacion .)
    RPAREN          reduce using rule 41 (expresion -> termino_comparacion .)
    GIVEN           reduce using rule 41 (expresion -> termino_comparacion .)
    GROUP           reduce using rule 41 (expresion -> termino_comparacion .)
    AUTO_DISCOVER   reduce using rule 41 (expresion -> termino_comparacion .)
    AND             shift and go to state 73


state 44

    (43) termino_comparacion -> termino_logico .

    AND             reduce using rule 43 (termino_comparacion -> termino_logico .)
    OR              reduce using rule 43 (termino_comparacion -> termino_logico .)
    error           reduce using rule 43 (termino_comparacion -> termino_logico .)
    DATASET         reduce using rule 43 (termino_comparacion -> termino_logico .)
    FACT            reduce using rule 43 (termino_comparacion -> termino_logico .)
    RULE            reduce using rule 43 (termino_comparacion -> termino_logico .)
    QUERY           reduce using rule 43 (termino_comparacion -> termino_logico .)
    ID              reduce using rule 43 (termino_comparacion -> termino_logico .)
    $end            reduce using rule 43 (termino_comparacion -> termino_logico .)
    RPAREN          reduce using rule 43 (termino_comparacion -> termino_logico .)
    GIVEN           reduce using rule 43 (termino_comparacion -> termino_logico .)
    GROUP           reduce using rule 43 (termino_comparacion -> termino_logico .)
    AUTO_DISCOVER   reduce using rule 43 (termino_comparacion -> termino_logico .)


state 45

    (44) termino_logico -> NOT . factor_logico
    (46) factor_logico -> . LPAREN expresion RPAREN
    (47) factor_logico -> . termino_relacional
    (48) factor_logico -> . probabilidad_condicional
    (49) factor_logico -> . ID
    (50) factor_logico -> . TRUE
    (51) factor_logico -> . FALSE
    (52) termino_relacional -> . termino_aritmetico operador_relacional termino_aritmetico
    (53) probabilidad_condicional -> . PROB LPAREN expresion RPAREN
    (54) probabilidad_condicional -> . PROB LPAREN expresion GIVEN expresion RPAREN
    (61) termino_aritmetico -> . termino_aritmetico ADD factor_aritmetico
    (62) termino_aritmetico -> . termino_aritmetico SUB factor_aritmetico
    (63) termino_aritmetico -> . factor_aritmetico
    (64) factor_aritmetico -> . factor_aritmetico MUL unario_aritmetico
    (65) factor_aritmetico -> . factor_aritmetico DIV unario_aritmetico
    (66) factor_aritmetico -> . unario_aritmetico
    (67) unario_aritmetico -> . SUB potencia
    (68) unario_aritmetico -> . ADD potencia
    (69) unario_aritmetico -> . potencia
    (70) potencia -> . valor_base POW unario_aritmetico
    (71) potencia -> . valor_base
    (72) valor_base -> . INT
    (73) valor_base -> . REAL
    (74) valor_base -> . STRING
    (75) valor_base -> . TRUE
    (76) valor_base -> . FALSE
    (77) valor_base -> . ID
    (78) valor_base -> . ID DOT ID
    (79) valor_base -> . LPAREN termino_aritmetico RPAREN
    (80) valor_base -> . probabilidad_condicional

    LPAREN          shift and go to state 47
    ID              shift and go to state 41
    TRUE            shift and go to state 50
    FALSE           shift and go to state 51
    PROB            shift and go to state 40
    SUB             shift and go to state 55
    ADD             shift and go to state 53
    INT             shift and go to state 59
    REAL            shift and go to state 60
    STRING          shift and go to state 61

    factor_logico                  shift and go to state 74
    termino_relacional             shift and go to state 48
    probabilidad_condicional       shift and go to state 49
    termino_aritmetico             shift and go to state 52
    factor_aritmetico              shift and go to state 54
    unario_aritmetico              shift and go to state 56
    potencia                       shift and go to state 57
    valor_base                     shift and go to state 58

state 46

    (45) termino_logico -> factor_logico .
